# diffusion-statlab

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: target_stats.yaml
experiments/: target_stats.py
src/: __init__.py  data_generators.py  objectives.py  plotting.py  schedules.py  stats.py  utils.py
tests/: test_schedule.py  test_stats.py  test_targets.py
