[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-statlab"
version = "0.1.0"
description = "Monte Carlo validation of diffusion model training objectives"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Yiyang LI", email = "leeliyiyang@gmail.com"}
]
keywords = ["diffusion", "v-prediction", "epsilon-prediction", "monte-carlo", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/brandlll-lee/diffusion-statlab"
Repository = "https://github.com/brandlll-lee/diffusion-statlab"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "experiments*"]
